Fix chat modal on mobile version

--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -205,30 +205,61 @@
     }   
     
     &__output {
-        min-height: 300px;
+        height: 300px;
         border-bottom: $border;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start
+
     }
 
     &__output-sender {
-        //width: fit-content;
-        width: auto;
-        display: inline-block;
         background-color: $tab-bg-color-hover;
         font-weight: $font-light;
         margin-left: 20px;
         padding: 10px;
         margin-bottom: 5px;
         border-radius: 3px;
+        position: relative;
         @include breakpoint(sm) {
             margin-left: 10px;
             margin-right: 10px;
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            top: -6px;
+            left: 0;
+            width: 0;
+            height: 0;
+            border-bottom: 8px solid #F5F5F2;
+            border-right: 8px solid transparent;
         }
     }
 
     &__output-receiver {
         background-color: $btn-primary-hover;
         color:#FFF;
-        @extend .chat-modal__output-sender;
+        font-weight: $font-light;
+        margin-left: 20px;
+        padding: 10px;
+        margin-bottom: 5px;
+        border-radius: 3px;
+        position: relative;
+        @include breakpoint(sm) {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -6px;
+            right: 0;
+            width: 0;
+            height: 0;
+            border-top: 8px solid #bababa;
+            border-left: 8px solid transparent;
+        }
     }
     &__form {
         display: flex;
